# hana-agent

./: .env.example  .gitignore  ISSUE_FOR_GITHUB_SUBMISSION.md  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements-issue-54.md  requirements.md  requirements.txt  run_tests.sh  setup.py  slack-manifest.yaml  task1_primes.py  task2_matrix.py  task3_montecarlo.py  task4_sorting.py  task5_image.py  test.txt  verify_phase3a.sh
.github/workflows/: pr-size-check.yml  test.yml
assets/icons/: GENERATION_LOG.md
cfn/: yui-agent-base.yaml
docs/: SETUP.md  agentcore-improvements.md  deploy-guide.md  deploy-standardization-discovery.md  kiro-test-review-2026-02-26.md  phase0-summary.md  phase1-2-implementation-summary.md  phase2-3-discovery.md  phase2.5-spec.md  phase3-implementation.md  phase3-verification.md  quickstart.md  slack-e2e-spec.md  slack-setup-guide.md  test-quality-rca-2026-02-26.md  testing-philosophy.md  workshop-testing-discovery.md
hana/: __init__.py  __main__.py  agent_core.py  main.py
hana/auth/: __init__.py  aws_credentials.py
hana/channels/: __init__.py  cli_adapter.py  slack_adapter.py
hana/cloud_tools/: __init__.py  browser.py  memory.py  search.py
hana/local_tools/: __init__.py  exec_tool.py  file_ops.py  git_tool.py  kiro.py  outlook.py
hana/runtime/: __init__.py  config_loader.py  daemon.py  guardrails.py  heartbeat.py  session.py
schema/: evaluation.schema.json
scripts/: __init__.py  check_mock_coverage.py  check_mock_drift.py  check_unused_mocks.py  generate_icon.py  generate_mock_fixtures.py  icon_presets.yaml
specs/: e2e-test-rewrite-plan.md  phase0-design-prompt.md  phase1-2-design-prompt.md  remove-mocks-spec.md
specs/mock-coverage-cicd/: discovery.md  requirements.md
specs/phase2c-autospec-contracts/: COMPLETION.md  design.md  requirements.md  tasks.md
specs/phase3a-cloud-component-tests/: IMPLEMENTATION_SUMMARY.md  design.md  requirements.md  tasks.md
specs/yui-icon-light-bg/: requirements.md
specs/yui-slack-icon/: design.md  requirements.md  tasks.md
src/yui/: __init__.py  __main__.py  agent.py  cli.py  config.py  daemon.py  heartbeat.py  lambda_handler.py  session.py  slack_adapter.py
tests/: README.md  __init__.py  conftest.py  factories.py  helpers.py  test_agent.py  test_agentcore.py  test_agentcore_e2e.py  test_aya_yui_integration.py  test_budget.py  test_cfn_validation.py  test_cli.py  test_config.py  test_config_loader.py  test_conflict.py  test_conftest.py  test_console_auth.py  test_converse_errors.py  test_daemon.py  test_deploy_e2e.sh  test_error_handling.py  test_evaluator.py  test_exec_tool.py  test_executor.py  test_file_ops.py  test_generate_icon.py  test_git_tool.py  test_guardrails.py  test_guardrails_e2e.py  test_heartbeat.py  test_improver.py  test_integration.py  test_kb_search.py  test_kiro_delegate.py  test_kiro_tools.py  test_lambda_adapter_switch.py  test_lambda_eventbridge.py  test_lambda_handler.py  test_lambda_layers.py  test_lambda_logging.py  (+26 more)
tests/contracts/: __init__.py  conftest.py  (+3 more)
workspace/: AGENTS.md  SOUL.md
(+39 files in other folders)
