[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yui-agent"
version = "0.1.0"
description = "結（Yui）: Lightweight AWS-optimized AI agent orchestrator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "m4minidesk-sys"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.35.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "slack-sdk>=3.30.0",
    "slack-bolt>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
meeting = [
    "mlx-whisper>=0.4",
    "sounddevice>=0.5",
    "numpy>=1.26",
]
ui = [
    "rumps>=0.4",
]
hotkey = [
    "pynput>=1.7",
]
all = [
    "yui-agent[meeting,ui,hotkey]",
]

[project.scripts]
yui = "yui.__main__:main"

[tool.setuptools.packages.find]
include = ["yui*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
